overflow fix

--- a/demo/stylesheets/mStyle.css
+++ b/demo/stylesheets/mStyle.css
@@ -30,8 +30,9 @@
 
 .container {
 	background: #202020;
-			    min-height: 100%;
+	min-height: 100%;
     height: 100%;
+    overflow: auto;
 
 }
 
